# GalPRIME

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  setup.py
docs/: conf.py  galprime.isophote_l.rst  index.rst  installation.rst  models.rst  running.rst
docs/1_intro/: config.rst
docs/2_processing/: generators.rst  models.rst  postprocessing.rst  running.rst
docs/JOSS/: paper.bib  paper.md
docs/_build/doctrees/: config.doctree  environment.pickle  examples.doctree  galprime.doctree  galprime.isophote_l.doctree  galprime.plotting.doctree  index.doctree  installation.doctree  intro.doctree  models.doctree  modules.doctree  papers.doctree  postprocessing.doctree  running.doctree
docs/_build/html/: .buildinfo  config.html  examples.html  galprime.html  galprime.isophote_l.html  galprime.plotting.html  genindex.html  index.html  installation.html  intro.html  models.html  modules.html  (+6 more)
galprime/: __init__.py  backgrounds.py  bgsub.py  binning.py  config.py  cutouts.py  extraction.py  masking.py  modeling.py  sims.py
galprime/analysis/: __init__.py  fluxes.py  profile_sets.py  profiles.py
galprime/core/: __init__.py  bgsub.py  binning.py  config.py  cutouts.py  extraction.py  kdes.py  masking.py  medians.py  postprocessing.py  sims.py  sims_old.py
galprime/isophotes/: harmonics.py  sampling.py
galprime/models/: __init__.py  backgrounds.py  galaxies.py  kde_models.py  kdes.py  verifiers.py
galprime/plotting/: __init__.py  general_plots.py  matrix_plots.py  utils.py
galprime/scripts/: bg_selector.py  gp_combine.py  run_galprime.py
galprime/utils/: __init__.py  cosmology.py  data_cleaning.py  fluxes.py  generators.py  handling.py  misc.py
notebooks/: BGSelection.ipynb  CombineOutputs.ipynb  ConvertReffUnits.ipynb  HandleOutputs.ipynb  ProfilePlots.ipynb  Sandbox.ipynb  TestBGSub.ipynb  TestBinning.ipynb  TestConfig.ipynb  TestExtractions.ipynb  TestGPrimeSim.ipynb  TestKDEs.ipynb  TestMasking.ipynb  TestModelBrightness.ipynb  TestMorphologyFit.ipynb  TestMultiComponentModel.ipynb  TestPlotting.ipynb  TestSim.ipynb  TestSynthetic.ipynb  default.gprime  default_test.gprime  isophotes.ipynb  myconfig-old.gprime  run_sim.py
paper/: 1-KDE-Plot.ipynb  N-ModelGalaxyPlot.ipynb
(+36 files in other folders)
