
[build-system]
requires = ["setuptools >= 77.0.3"]


[project]
dynamic = ["version"]
name = "galprime"


dependencies = [
    "astropy",
    "photutils",
    "matplotlib",
    "numpy",
    "scikit-image",
    "tqdm",
    "configobj",
    "pebble",
    "maskfill",
]

requires-python = ">=3.9"

[project.scripts]
bg_selector = "galprime.scripts.bg_selector:main"
run_galprime = "galprime.scripts.run_galprime:main"
gp_combine = "galprime.scripts.gp_combine:main"
